[gd_scene load_steps=7 format=2]

[ext_resource path="res://gui/tally_screen.gd" type="Script" id=1]
[ext_resource path="res://stages/tile_light_texture.png" type="Texture" id=2]
[ext_resource path="res://gui/tally_table_row.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui/centered_label_button.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=2]
resource_name = "load_screen"
length = 7.5
tracks/0/type = "value"
tracks/0/path = NodePath("TallyScreen/ScreenBlocks/Sections/Header/TitleBox/Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1000, 0 ), Vector2( 110, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TallyScreen/ScreenBlocks/Sections/Header/SectionSeparator:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TallyScreen/ScreenBlocks/Sections/TallyArea/SectionSeparator:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TallyScreen/ScreenBlocks/Sections/TallyArea/TallyRow/Content/Labels/Label:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 6, 7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1000, 0 ), Vector2( -1000, 0 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TallyScreen/ScreenBlocks/Sections/TallyArea/TallyRow/Content/Labels/Value:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 6, 7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1000, 0 ), Vector2( 1000, 0 ), Vector2( 367, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TallyScreen/ScreenBlocks/ButtonContainer:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 7, 7.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "animation"
tracks/6/path = NodePath("TallyScreen/ScreenBlocks/Sections/TallyTable/TallyRowCitizens/AnimationPlayer")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"clips": PoolStringArray( "appear" ),
"times": PoolRealArray( 2 )
}
tracks/7/type = "animation"
tracks/7/path = NodePath("TallyScreen/ScreenBlocks/Sections/TallyTable/TallyRowNRTs/AnimationPlayer")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"clips": PoolStringArray( "appear" ),
"times": PoolRealArray( 3 )
}
tracks/8/type = "animation"
tracks/8/path = NodePath("TallyScreen/ScreenBlocks/Sections/TallyTable/TallyRowOverallRebel/AnimationPlayer")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"clips": PoolStringArray( "appear" ),
"times": PoolRealArray( 4 )
}
tracks/9/type = "value"
tracks/9/path = NodePath("TallyScreen/ScreenBlocks/Sections/TallyTable/TallyRowCitizens:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("TallyScreen/ScreenBlocks/Sections/TallyTable/TallyRowNRTs:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("TallyScreen/ScreenBlocks/Sections/TallyTable/TallyRowOverallRebel:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 4, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 0.196078, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 0.196078, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 1
shadow_size = 1
anti_aliasing = false

[node name="TallyScreenRoot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="DarkOverlay" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 0.392157 )
margin_left = -2500.0
margin_top = -500.0
margin_right = 3500.0
margin_bottom = 1500.0
texture = ExtResource( 2 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "load_screen"
playback_speed = 1.5
anims/load_screen = SubResource( 2 )
next/load_screen = "flashin_button"

[node name="TallyScreen" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScreenBlocks" type="VBoxContainer" parent="TallyScreen"]
margin_right = 1180.0
margin_bottom = 620.0

[node name="Sections" type="VBoxContainer" parent="TallyScreen/ScreenBlocks"]
margin_right = 1180.0
margin_bottom = 513.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="Header" type="VBoxContainer" parent="TallyScreen/ScreenBlocks/Sections"]
margin_right = 1180.0
margin_bottom = 72.0
size_flags_vertical = 3
custom_constants/separation = 25

[node name="TitleBox" type="HBoxContainer" parent="TallyScreen/ScreenBlocks/Sections/Header"]
editor/display_folded = true
margin_right = 1180.0
margin_bottom = 31.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="VSeparator" type="VSeparator" parent="TallyScreen/ScreenBlocks/Sections/Header/TitleBox"]
margin_right = 106.0
margin_bottom = 31.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TallyScreen/ScreenBlocks/Sections/Header/TitleBox"]
margin_left = 110.0
margin_right = 1180.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0
custom_colors/font_color = Color( 1, 1, 0.196078, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Stage Summary"
valign = 2
uppercase = true

[node name="SectionSeparator" type="HSeparator" parent="TallyScreen/ScreenBlocks/Sections/Header"]
margin_top = 56.0
margin_right = 1180.0
margin_bottom = 72.0
size_flags_vertical = 3
custom_styles/separator = SubResource( 3 )

[node name="TallyTable" type="VBoxContainer" parent="TallyScreen/ScreenBlocks/Sections"]
margin_top = 76.0
margin_right = 1180.0
margin_bottom = 436.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="TallyRowCitizens" parent="TallyScreen/ScreenBlocks/Sections/TallyTable" instance=ExtResource( 3 )]

[node name="TallyRowNRTs" parent="TallyScreen/ScreenBlocks/Sections/TallyTable" instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 0.857143 )
margin_top = 121.0
margin_bottom = 238.0

[node name="TallyRowOverallRebel" parent="TallyScreen/ScreenBlocks/Sections/TallyTable" instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 0.75 )
margin_top = 242.0
margin_bottom = 360.0

[node name="LeftPadding" parent="TallyScreen/ScreenBlocks/Sections/TallyTable/TallyRowOverallRebel" index="0"]
margin_bottom = 118.0

[node name="Content" parent="TallyScreen/ScreenBlocks/Sections/TallyTable/TallyRowOverallRebel" index="1"]
margin_bottom = 118.0

[node name="StartPadding" parent="TallyScreen/ScreenBlocks/Sections/TallyTable/TallyRowOverallRebel/Content" index="0"]
margin_bottom = 118.0

[node name="Labels" parent="TallyScreen/ScreenBlocks/Sections/TallyTable/TallyRowOverallRebel/Content" index="1"]
margin_bottom = 118.0

[node name="Label" parent="TallyScreen/ScreenBlocks/Sections/TallyTable/TallyRowOverallRebel/Content/Labels" index="0"]
margin_top = 52.0
margin_bottom = 66.0

[node name="Value" parent="TallyScreen/ScreenBlocks/Sections/TallyTable/TallyRowOverallRebel/Content/Labels" index="1"]
margin_top = 52.0
margin_bottom = 66.0

[node name="EndPadding" parent="TallyScreen/ScreenBlocks/Sections/TallyTable/TallyRowOverallRebel/Content" index="2"]
margin_bottom = 118.0

[node name="RightPadding" parent="TallyScreen/ScreenBlocks/Sections/TallyTable/TallyRowOverallRebel" index="2"]
margin_bottom = 118.0

[node name="TallyArea" type="VBoxContainer" parent="TallyScreen/ScreenBlocks/Sections"]
editor/display_folded = true
margin_top = 440.0
margin_right = 1180.0
margin_bottom = 513.0
size_flags_vertical = 3

[node name="SectionSeparator" type="HSeparator" parent="TallyScreen/ScreenBlocks/Sections/TallyArea"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 1180.0
margin_bottom = 23.0
size_flags_vertical = 3
custom_styles/separator = SubResource( 3 )

[node name="TallyRow" type="HBoxContainer" parent="TallyScreen/ScreenBlocks/Sections/TallyArea"]
margin_top = 27.0
margin_right = 1180.0
margin_bottom = 73.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="LeftPadding" type="HSeparator" parent="TallyScreen/ScreenBlocks/Sections/TallyArea/TallyRow"]
margin_right = 167.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Content" type="HBoxContainer" parent="TallyScreen/ScreenBlocks/Sections/TallyArea/TallyRow"]
margin_left = 171.0
margin_right = 1008.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="StartPadding" type="VSeparator" parent="TallyScreen/ScreenBlocks/Sections/TallyArea/TallyRow/Content"]
margin_right = 48.0
margin_bottom = 46.0
size_flags_horizontal = 3

[node name="Labels" type="HBoxContainer" parent="TallyScreen/ScreenBlocks/Sections/TallyArea/TallyRow/Content"]
margin_left = 52.0
margin_right = 783.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 15.0

[node name="Label" type="Label" parent="TallyScreen/ScreenBlocks/Sections/TallyArea/TallyRow/Content/Labels"]
margin_right = 363.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Total added points:"

[node name="Value" type="Label" parent="TallyScreen/ScreenBlocks/Sections/TallyArea/TallyRow/Content/Labels"]
margin_left = 367.0
margin_right = 731.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "5/7"
align = 2

[node name="EndPadding" type="VSeparator" parent="TallyScreen/ScreenBlocks/Sections/TallyArea/TallyRow/Content"]
margin_left = 787.0
margin_right = 837.0
margin_bottom = 46.0
size_flags_horizontal = 3

[node name="RightPadding" type="HSeparator" parent="TallyScreen/ScreenBlocks/Sections/TallyArea/TallyRow"]
margin_left = 1012.0
margin_right = 1180.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonContainer" parent="TallyScreen/ScreenBlocks" instance=ExtResource( 4 )]
modulate = Color( 1, 1, 1, 0 )
margin_top = 517.0
margin_right = 1180.0
margin_bottom = 620.0

[editable path="TallyScreen/ScreenBlocks/Sections/TallyTable/TallyRowCitizens"]

[editable path="TallyScreen/ScreenBlocks/Sections/TallyTable/TallyRowNRTs"]

[editable path="TallyScreen/ScreenBlocks/Sections/TallyTable/TallyRowOverallRebel"]
